# RadarGNN

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
configurations/: configuration_description.yml  configuration_nuscenes.yml  configuration_radarscenes.yml  configuration_template.yml
src/gnnradarobjectdetection/: create_dataset.py  evaluate.py  main.py  train.py
src/gnnradarobjectdetection/gnn/: configs.py  gnn_models.py  mpnn_layers.py  trainer.py
src/gnnradarobjectdetection/graph_constructor/: features.py  graph.py
src/gnnradarobjectdetection/postprocessor/: __init__.py  configs.py  evaluation.py  inference.py  metrics.py  postprocessing.py  torchmetrics_mean_ap.py  visualization.py
src/gnnradarobjectdetection/postprocessor/nuscenes/: evaluation.py  utils.py
src/gnnradarobjectdetection/preprocessor/: __init__.py  bounding_box.py  configs.py  radar_point_cloud.py
src/gnnradarobjectdetection/utils/: data_handling.py  user_config_reader.py
src/radargnn/: create_dataset.py  evaluate.py  main.py  train.py
src/radargnn/gnn/: gnn_models.py  trainer.py
src/radargnn/graph_constructor/: graph.py
src/radargnn/postprocessor/: __init__.py  evaluation.py  metrics.py  postprocessing.py  torchmetrics_mean_ap.py  visualization.py
src/radargnn/preprocessor/: __init__.py  bounding_box.py  radar_point_cloud.py
src/radargnn/utils/: math.py  radar_scenes_properties.py  user_config_reader.py
test/: test_gnn.py  test_graph_constructor.py  test_postprocessor.py  test_preprocessor.py
(+16 files in other folders)
