[metadata]
name = gnnradarobjectdetection
version = 1.0.0

[options]
packages = gnnradarobjectdetection
install_requires = 
        torch
        torchvision
        torchmetrics
        torch_geometric
        torch_sparse
        torch_scatter
        radar_scenes
        pyyaml
        networkx
        matplotlib
        ray
        nuscenes-devkit
python_requires = >=3.6
package_dir = =src
